# rust-pattern-components

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  factory.rs  lib.rs  observer.rs
