[package]
name = "rust-pattern-components"
version = "0.1.1"
edition = "2024"
description = "A Rust library providing implementations of common design patterns"
authors = ["Linshan Yang <yanglsh@yeah.net>"]
license = "MIT"
repository = "https://github.com/sdht-siset/rust-pattern-components.git"
documentation = "https://docs.rs/rust-pattern-components"
keywords = ["design-patterns", "builder", "factory", "observer", "patterns"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
inventory = "0.3"
static_assertions = "1.1"
thiserror = "2.0"

[dev-dependencies]

[features]
default = []

[lib]
name = "rust_patterns_components"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
